[tool.poetry]
name = "rmlines"
version = "0.1.0"
description = ""
authors = ["Blair Azzopardi <blairuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.5.1"
svgpathtools = { git = "https://github.com/mathandy/svgpathtools.git", rev = "f99f9d6bb3519ecdcb7b167f75a09178595cf89c" }
rmapy = {git = "https://github.com/bsdz/rmapy.git", rev = "master"}
pillow = "^7.1.2"
numpy = "^1.19.4"
pypotrace = {git = "https://github.com/flupke/pypotrace.git", rev = "master"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
ipykernel = "^5.3.0"
snakeviz = "^2.1.0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
